--- a/RoadHantei_step2.html
+++ b/RoadHantei_step2.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
 
       <div class="header__mb">
-        <div class="header__mb__logout"><a href=""><i class="icon-logout"></i>ログアウト</a></div>
+        <div class="header__mb__logout"><a href=""><i class="ic-logout"></i>ログアウト</a></div>
         <div class="header__mb__logo"><a href=""><img src="images/logo-mb.svg" alt=""></a></div>
         <div class="header__mb__avatar"><a href=""><img src="images/avatar.png" alt=""></a></div>
       </div>
@@ -32,11 +32,11 @@
           <div class="menuLeft__content">
             <div class="main__nav">
               <ul class="el__menu">
-                <li><a href="index.html"><i class="icon-home"></i>HOME</a></li>
-                <li class="active"><a href="bukken.html"><i class="icon-appraisal"></i>物件鑑定</a></li>
-                <li><a href="user-info.html"><i class="icon-user"></i>会員情報</a></li>
-                <li><a href=""><i class="icon-bar-chart"></i>地価データ</a></li>
-                <li><a href=""><i class="icon-logout"></i>ログアウト</a></li>
+                <li><a href="index.html"><i class="ic-home"></i>HOME</a></li>
+                <li class="active"><a href="bukken.html"><i class="ic-appraisal"></i>物件鑑定</a></li>
+                <li><a href="user-info.html"><i class="ic-user"></i>会員情報</a></li>
+                <li><a href=""><i class="ic-bar-chart"></i>地価データ</a></li>
+                <li><a href=""><i class="ic-logout"></i>ログアウト</a></li>
               </ul>
             </div>
           </div>
@@ -174,7 +174,7 @@
       <div class="mb__bukkenfix -modal d-lg-none">
         <ul class="row gx-0">
           <li class="col-6">
-            <button type="button" class="" data-bs-dismiss="modal" aria-label="Close"><i class="icon-angle-right rotate-180"></i> 戻る</button>
+            <button type="button" class="" data-bs-dismiss="modal" aria-label="Close"><i class="ic-angle-left"></i> 戻る</button>
           </li>
           <li class="col-6 -right">
             <button type="button" class="active">確認する <i class="ic-plus-circle-white -plus"></i></button>
