--- a/bukken-detail.html
+++ b/bukken-detail.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
 
       <div class="header__mb">
-        <div class="header__mb__logout"><a href=""><i class="icon-logout"></i>ログアウト</a></div>
+        <div class="header__mb__logout"><a href=""><i class="ic-logout"></i>ログアウト</a></div>
         <div class="header__mb__logo"><a href=""><img src="images/logo-mb.svg" alt=""></a></div>
         <div class="header__mb__avatar"><a href=""><img src="images/avatar.png" alt=""></a></div>
       </div>
@@ -32,11 +32,11 @@
           <div class="menuLeft__content">
             <div class="main__nav">
               <ul class="el__menu">
-                <li><a href="index.html"><i class="icon-home"></i>HOME</a></li>
-                <li class="active"><a href="bukken.html"><i class="icon-appraisal"></i>物件鑑定</a></li>
-                <li><a href="user-info.html"><i class="icon-user"></i>会員情報</a></li>
-                <li><a href=""><i class="icon-bar-chart"></i>地価データ</a></li>
-                <li><a href=""><i class="icon-logout"></i>ログアウト</a></li>
+                <li><a href="index.html"><i class="ic-home"></i>HOME</a></li>
+                <li class="active"><a href="bukken.html"><i class="ic-appraisal"></i>物件鑑定</a></li>
+                <li><a href="user-info.html"><i class="ic-user"></i>会員情報</a></li>
+                <li><a href=""><i class="ic-bar-chart"></i>地価データ</a></li>
+                <li><a href=""><i class="ic-logout"></i>ログアウト</a></li>
               </ul>
             </div>
           </div>
@@ -60,7 +60,7 @@
 
           <div class="sc__box mb-4">
             <div class="sc__box__header -small d-flex align-items-center">
-              <h4 class="sc__box__title d-flex align-items-center"><i class="icon-appraisal"></i>物件詳細</h4>
+              <h4 class="sc__box__title d-flex align-items-center"><i class="ic-appraisal -size24"></i>物件詳細</h4>
             </div>
             <div class="accordion -detail" id="accordionBukken">
               <div class="accordion-item">
@@ -126,7 +126,7 @@
                                   <div class="table__fake__td d-flex">
                                     <span>2021.12.13</span>
                                     <div class="ms-auto">
-                                      <span class="icon-trash"></span>
+                                      <span class="ic-trash"></span>
                                     </div>
                                   </div>
                                 </div>
@@ -142,7 +142,7 @@
                                   <div class="table__fake__td d-flex">
                                     <span>2021.12.13</span>
                                     <div class="ms-auto">
-                                      <span class="icon-trash"></span>
+                                      <span class="ic-trash"></span>
                                     </div>
                                   </div>
                                 </div>
@@ -151,7 +151,7 @@
                             </div>
                         </div> <!-- .table__fake -->
 
-                        <button class="btn -s2"><i class="icon-data-capture"></i> 公募資料アップロード</button>
+                        <button class="btn -s2"><i class="ic-data-capture"></i> 公募資料アップロード</button>
                       </div>
                     </div><!-- .row -->
                   
@@ -861,7 +861,7 @@
           <button type="button" class="btn-close -fix d-none d-lg-block" data-bs-dismiss="modal" aria-label="Close">戻る</button>
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="modal-title" id="exampleModalLabel"><span class="icon-map pe-3"></span>法第14条地図で特定</h4>
+              <h4 class="modal-title" id="exampleModalLabel"><span class="ic-map pe-3"></span>法第14条地図で特定</h4>
             </div>
             <div class="modal-body">
               <div class="row gx-5">
@@ -872,7 +872,7 @@
                     <div class="modal__picture__content">
                       <p class="mb-4"><strong>ここにファイルをドラッグ＆ドロップ</strong></p>
                       <p class="mb-4">または</p>
-                      <button type="button" class="btn -s2"><i class="icon-data-capture"></i> ファイルを選択</button>
+                      <button type="button" class="btn -s2"><i class="ic-data-capture"></i> ファイルを選択</button>
                     </div>
                   </div>
                 </div>
@@ -939,10 +939,10 @@
         <div class="mb__bukkenfix -modal d-lg-none">
           <ul class="row gx-0">
             <li class="col-6">
-              <button type="button" class="" data-bs-dismiss="modal" aria-label="Close"><i class="icon-angle-right rotate-180"></i> 戻る</button>
+              <button type="button" class="" data-bs-dismiss="modal" aria-label="Close"><i class="ic-angle-left"></i> 戻る</button>
             </li>
             <li class="col-6 -right">
-              <button type="button" class=""><i class="icon-data-capture"></i> 公図アップロード</button>
+              <button type="button" class=""><i class="ic-data-capture"></i> 公図アップロード</button>
             </li>
           </ul>
         </div>
@@ -952,7 +952,7 @@
       <ul class="block__bukkenfix d-none d-md-block">
         <li>
           <a href="">
-            <i class="icon-plus"></i>
+            <i class="ic-plus"></i>
             <p>保存</p>
           </a>
         </li>
@@ -961,10 +961,10 @@
       <div class="mb__bukkenfix d-md-none">
         <ul class="row gx-0">
           <li class="col-6">
-            <a href=""><i class="icon-angle-right rotate-180"></i> 戻る</a>
+            <a href=""><i class="ic-angle-left"></i> 戻る</a>
           </li>
           <li class="col-6 -right">
-            <a href=""><i class="icon-edit"></i> 編集する</a>
+            <a href=""><i class="ic-edit"></i> 編集する</a>
           </li>
         </ul>
       </div>
