--- a/bukken.html
+++ b/bukken.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
 
       <div class="header__mb">
-        <div class="header__mb__logout"><a href=""><i class="icon-logout"></i>ログアウト</a></div>
+        <div class="header__mb__logout"><a href=""><i class="ic-logout"></i>ログアウト</a></div>
         <div class="header__mb__logo"><a href=""><img src="images/logo-mb.svg" alt=""></a></div>
         <div class="header__mb__avatar"><a href=""><img src="images/avatar.png" alt=""></a></div>
       </div>
@@ -32,11 +32,11 @@
           <div class="menuLeft__content">
             <div class="main__nav">
               <ul class="el__menu">
-                <li><a href="index.html"><i class="icon-home"></i>HOME</a></li>
-                <li class="active"><a href="bukken.html"><i class="icon-appraisal"></i>物件鑑定</a></li>
-                <li><a href="user-info.html"><i class="icon-user"></i>会員情報</a></li>
-                <li><a href=""><i class="icon-bar-chart"></i>地価データ</a></li>
-                <li><a href=""><i class="icon-logout"></i>ログアウト</a></li>
+                <li><a href="index.html"><i class="ic-home"></i>HOME</a></li>
+                <li class="active"><a href="bukken.html"><i class="ic-appraisal"></i>物件鑑定</a></li>
+                <li><a href="user-info.html"><i class="ic-user"></i>会員情報</a></li>
+                <li><a href=""><i class="ic-bar-chart"></i>地価データ</a></li>
+                <li><a href=""><i class="ic-logout"></i>ログアウト</a></li>
               </ul>
             </div>
           </div>
@@ -62,19 +62,19 @@
             <ul class="d-flex">
               <li>
                 <a href="">
-                  <i class="icon-plus"></i>
+                  <i class="ic-plus"></i>
                   <p>物件登録</p>
                 </a>
               </li>
               <li>
                 <a href="">
-                  <i class="icon-data-capture"></i>
+                  <i class="ic-data-capture"></i>
                   <p>データ取込</p>
                 </a>
               </li>
               <li>
                 <a href="">
-                  <i class="icon-print"></i>
+                  <i class="ic-print"></i>
                   <p>資料印刷</p>
                 </a>
               </li>
@@ -83,11 +83,11 @@
 
           <div class="sc__box -list mb-4">
             <div class="sc__box__header -small d-flex align-items-center">
-              <h4 class="sc__box__title d-flex align-items-center"><i class="icon-appraisal"></i>登録物件一覧</h4>
+              <h4 class="sc__box__title d-flex align-items-center"><i class="ic-appraisal -size24"></i>登録物件一覧</h4>
 
               <div class="d-none d-lg-block ms-4">
-                <button class="table__btn me-3"><i class="icon-edit"></i>編集</button>
-                <button class="table__btn"><i class="icon-trash"></i>削除</button>
+                <button class="table__btn me-3"><i class="ic-edit"></i>編集</button>
+                <button class="table__btn"><i class="ic-trash"></i>削除</button>
               </div>
             </div>
             <div class="table-wrapper">
@@ -133,8 +133,8 @@
                             <i class="icon-dots"></i>
                           </a>
                           <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="ic-edit"></i> 編集</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="ic-trash"></i> 削除</a></li>
                           </ul>
                         </div>
                       </td>
@@ -160,8 +160,8 @@
                             <i class="icon-dots"></i>
                           </a>
                           <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="ic-edit"></i> 編集</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="ic-trash"></i> 削除</a></li>
                           </ul>
                         </div>
                       </td>
@@ -187,8 +187,8 @@
                             <i class="icon-dots"></i>
                           </a>
                           <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="ic-edit"></i> 編集</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="ic-trash"></i> 削除</a></li>
                           </ul>
                         </div>
                       </td>
@@ -214,8 +214,8 @@
                             <i class="icon-dots"></i>
                           </a>
                           <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="ic-edit"></i> 編集</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="ic-trash"></i> 削除</a></li>
                           </ul>
                         </div>
                       </td>
@@ -241,8 +241,8 @@
                             <i class="icon-dots"></i>
                           </a>
                           <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="ic-edit"></i> 編集</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="ic-trash"></i> 削除</a></li>
                           </ul>
                         </div>
                       </td>
@@ -268,8 +268,8 @@
                             <i class="icon-dots"></i>
                           </a>
                           <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="ic-edit"></i> 編集</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="ic-trash"></i> 削除</a></li>
                           </ul>
                         </div>
                       </td>
@@ -295,8 +295,8 @@
                             <i class="icon-dots"></i>
                           </a>
                           <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="ic-edit"></i> 編集</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="ic-trash"></i> 削除</a></li>
                           </ul>
                         </div>
                       </td>
@@ -322,8 +322,8 @@
                             <i class="icon-dots"></i>
                           </a>
                           <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="ic-edit"></i> 編集</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="ic-trash"></i> 削除</a></li>
                           </ul>
                         </div>
                       </td>
@@ -349,8 +349,8 @@
                             <i class="icon-dots"></i>
                           </a>
                           <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="ic-edit"></i> 編集</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="ic-trash"></i> 削除</a></li>
                           </ul>
                         </div>
                       </td>
@@ -376,8 +376,8 @@
                             <i class="icon-dots"></i>
                           </a>
                           <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="ic-edit"></i> 編集</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="ic-trash"></i> 削除</a></li>
                           </ul>
                         </div>
                       </td>
@@ -403,8 +403,8 @@
                             <i class="icon-dots"></i>
                           </a>
                           <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="ic-edit"></i> 編集</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="ic-trash"></i> 削除</a></li>
                           </ul>
                         </div>
                       </td>
@@ -430,8 +430,8 @@
                             <i class="icon-dots"></i>
                           </a>
                           <ul class="dropdown-menu dropdown-menu-end">
-                            <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
-                            <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="ic-edit"></i> 編集</a></li>
+                            <li><a class="dropdown-item" href="#"><i class="ic-trash"></i> 削除</a></li>
                           </ul>
                         </div>
                       </td>
@@ -445,19 +445,19 @@
             <ul class="d-flex">
               <li>
                 <a href="">
-                  <i class="icon-plus"></i>
+                  <i class="ic-plus"></i>
                   <p>物件登録</p>
                 </a>
               </li>
               <li>
                 <a href="">
-                  <i class="icon-data-capture"></i>
+                  <i class="ic-data-capture"></i>
                   <p>データ取込</p>
                 </a>
               </li>
               <li>
                 <a href="">
-                  <i class="icon-print"></i>
+                  <i class="ic-print"></i>
                   <p>資料印刷</p>
                 </a>
               </li>
@@ -470,21 +470,21 @@
       <div class="mb__bukkenfix -table-edit d-lg-none js-table-action-mb">
         <ul class="row gx-0">
           <li class="col-6 border-end">
-            <a href=""><i class="icon-edit"></i> 編集</a>
+            <a href=""><i class="ic-edit"></i> 編集</a>
           </li>
           <li class="col-6">
-            <a href=""><i class="icon-trash"></i> 削除</a>
+            <a href=""><i class="ic-trash"></i> 削除</a>
           </li>
         </ul>
       </div>
 
       <div class="nav__mobile">
         <ul class="nav__mobile--ul">
-          <li><a href="index.html"><i class="icon-home"></i>HOME</a></li>
-          <li class="active"><a href="bukken.html"><i class="icon-appraisal"></i>物件鑑定</a></li>
-          <li><a href="user-info.html"><i class="icon-user"></i>会員情報</a></li>
-          <li><a href=""><i class="icon-bar-chart"></i>地価データ</a></li>
-          <li><a href=""><i class="icon-dots"></i>その他</a></li>
+          <li><a href="index.html"><i class="ic-home"></i>HOME</a></li>
+          <li class="active"><a href="bukken.html"><i class="ic-appraisal"></i>物件鑑定</a></li>
+          <li><a href="user-info.html"><i class="ic-user"></i>会員情報</a></li>
+          <li><a href=""><i class="ic-bar-chart"></i>地価データ</a></li>
+          <li><a href=""><i class="ic-dots"></i>その他</a></li>
         </ul>
       </div>
 
