--- a/card-mb.html
+++ b/card-mb.html
@@ -16,37 +16,43 @@
       body{color:#666666;font-weight:500;font-size:14px;line-height:normal;position:relative;background:#F9F9F9;}
       hr{height:1px;margin:1rem 0;color:#CCCCCC;border:0;background-color:#CCCCCC;}
 
-      .text-center{text-align:center!important;}
-      .d-none{display:none!important;}
-      .d-flex{display:flex!important;}
-      .align-items-center{align-items:center!important;}
-      .justify-content-center{justify-content:center!important;}
-      .form-control{display:block;width:100%;min-height:42px;padding:0.375rem 0.75rem;font-size:1rem;font-weight:400;line-height:1.5;color:#212529;background-color:#fff;background-clip:padding-box;border:1px solid #ced4da;border-radius:7px;transition:border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;}
-      .mb-35{margin-bottom:35px!important;}
-      .ms-3{margin-left:1rem!important;}
-      .me-3{margin-right:1rem!important;}
-      .mb-3{margin-bottom:1rem!important;}
-      .mb-4{margin-bottom:1.5rem!important;}
-      .ms-auto{margin-left:auto!important;}
-      .input-group{position:relative;display:flex;flex-wrap:wrap;align-items:stretch;width:100%;margin-bottom:50px;}
-      .btn{position:relative;min-width:220px;background:#FC8800;border-radius:8px;border:0;line-height:24px;padding:17px 30px;font-weight:bold;font-size:14px;color:#FFFFFF;letter-spacing:2px;transition:all .3s;border:1px solid #fc8800;}
-      .btn:hover{color:#ffffff;box-shadow:0 0 10px #fff;background:#51A1B9;border-color:#51A1B9;}
-      .btn.-three{font-weight:500;border:1px solid #CCCCCC;background:#CCCCCC;color:#fff;}
-      .btn.-three:hover{background:#666666;color:#fff;}
-      .mw100px{width:100%;max-width:100px;}
-      .flex-mw100px{width:calc(100% - 100px);}
-      .mw150px{width:100%;max-width:150px;}
-      .flex-mw150px{width:calc(100% - 150px);}
-      .mw200px{width:100%;max-width:200px;}
-      .flex-mw200px{width:calc(100% - 200px);}
-      .mw310px{width:100%;max-width:310px;}
-      .flex-mw310px{width:calc(100% - 310px);}
-      .card__wrapper{max-width:960px;margin:auto;padding:36px 70px;}
-      .card__form{font-size:12px;font-weight:500;background:#fff;border-radius:10px;box-shadow:0 0 12px rgb(69 76 85 / 16%);}
-      .card__form .el__header,.card__form .el__content{padding:35px 40px;}
-      .card__form .el__footer{padding:0 35px 80px;}
-      .card__form .el__header{font-size:24px;font-weight:500;color:#666666;border-bottom:1px solid #CCCCCC;}
-      .card__form .el__label{font-size:16px;}
+    .text-center{text-align:center!important;}
+    .d-none{display:none!important;}
+    .d-flex{display:flex!important;}
+    .align-items-center{align-items:center!important;}
+    .justify-content-center{justify-content:center!important;}
+    .form-control{display:block;width:100%;min-height:54px;padding:0.375rem 0.75rem;font-size:1rem;font-weight:400;line-height:1.5;color:#212529;background-color:#fff;background-clip:padding-box;border:1px solid #ced4da;border-radius:7px;transition:border-color 0.15s ease-in-out,box-shadow 0.15s ease-in-out;}
+    .mb-35{margin-bottom:35px!important;}
+    .ms-3{margin-left:1rem!important;}
+    .me-3{margin-right:1rem!important;}
+    .mb-3{margin-bottom:1rem!important;}
+    .mb-4{margin-bottom:1.5rem!important;}
+    .ms-auto{margin-left:auto!important;}
+    .input-group{position:relative;display:flex;flex-wrap:wrap;align-items:stretch;width:100%;margin-bottom:50px;}
+    .btn{position:relative;min-width:220px;min-height:68px;background:#FC8800;border-radius:8px;border:0;line-height:24px;padding:17px 30px;font-weight:bold;font-size:14px;color:#FFFFFF;letter-spacing:2px;transition:all .3s;border:1px solid #fc8800;}
+    .btn:hover{color:#ffffff;box-shadow:0 0 10px #fff;background:#51A1B9;border-color:#51A1B9;}
+    .btn.-three{font-weight:500;border:1px solid #CCCCCC;background:#CCCCCC;color:#fff;}
+    .btn.-three:hover{background:#666666;color:#fff;}
+    .mw100px{width:100%;max-width:100px;}
+    .flex-mw100px{width:calc(100% - 100px);}
+    .mw150px{width:100%;max-width:150px;}
+    .flex-mw150px{width:calc(100% - 150px);}
+    .mw200px{width:100%;max-width:200px;}
+    .flex-mw200px{width:calc(100% - 200px);}
+    .mw310px{width:100%;max-width:310px;}
+    .flex-mw310px{width:calc(100% - 310px);}
+    .card__wrapper{max-width:1100px;margin:auto;padding:36px 70px;}
+    .card__form{font-size:12px;font-weight:500;background:#fff;border-radius:10px;box-shadow:0 0 12px rgb(69 76 85 / 16%);}
+    .card__form .el__header,.card__form .el__content{padding:35px 40px;}
+    .card__form .el__footer{padding:0 35px 80px;}
+    .card__form .el__header{font-size:24px;font-weight:500;color:#666666;border-bottom:1px solid #CCCCCC;}
+    .card__form .el__label{font-size:16px;}
+      .select__wrap{position:relative;width:100%;}
+      .select__wrap select{-webkit-appearance:none;-moz-appearance:none;text-indent:1px;text-overflow:'';}
+      .select__wrap::before,.select__wrap::after{content:"";position:absolute;right:12px;z-index:11;display:block;width:4px;height:4px;border-top:1px solid #666666;border-left:1px solid #666666;}
+      .select__wrap::before{top:22px;transform:rotate(45deg);}
+      .select__wrap::after{top:28px;transform:rotate(225deg);}
+
       @media (max-width:1199px){
         .card__wrapper{margin:auto;}
       }
@@ -127,12 +133,14 @@
                       <div class="d-sm-flex mb-4 mb-sm-3">
                         <p class="mw100px el__label--mb">カード種別</p>
                         <div class="flex-mw100px ms-auto">
-                          <select name="" id="" class="form-control mw150px">
-                            <option value=""></option>
-                            <option value="">カード種別</option>
-                            <option value="">カード種別</option>
-                            <option value="">カード種別</option>
-                          </select>
+                          <div class="select__wrap mw150px">
+                            <select name="" id="" class="form-control">
+                              <option value=""></option>
+                              <option value="">カード種別</option>
+                              <option value="">カード種別</option>
+                              <option value="">カード種別</option>
+                            </select>
+                          </div>
                         </div>
                       </div>
 
@@ -148,22 +156,26 @@
                         <div class="flex-mw100px ms-auto d-flex">
 
                           <div class="mw100px d-flex align-items-center me-3">
-                            <select name="" id="" class="form-control">
-                              <option value=""></option>
-                              <option value="">年</option>
-                              <option value="">年</option>
-                              <option value="">年</option>
-                            </select>
+                            <div class="select__wrap">
+                              <select name="" id="" class="form-control">
+                                <option value=""></option>
+                                <option value="">年</option>
+                                <option value="">年</option>
+                                <option value="">年</option>
+                              </select>
+                            </div>
                             <span class="ms-3">年</span>
                           </div>
 
                           <div class="mw100px d-flex align-items-center">
-                            <select name="" id="" class="form-control">
-                              <option value=""></option>
-                              <option value="">月</option>
-                              <option value="">月</option>
-                              <option value="">月</option>
-                            </select>
+                            <div class="select__wrap">
+                              <select name="" id="" class="form-control">
+                                <option value=""></option>
+                                <option value="">月</option>
+                                <option value="">月</option>
+                                <option value="">月</option>
+                              </select>
+                            </div>
                             <span class="ms-3">月</span>
                           </div>
                         </div>
@@ -180,8 +192,8 @@
                   <hr>
                 </div>
                 <div class="el__footer d-sm-flex justify-content-center">
-                  <button type="button" class="btn -three mb-3 mb-sm-0 me-3">戻る</button>
-                  <button type="button" class="btn">保存</button>
+                  <button type="button" class="btn -three mb-3 mb-sm-0 me-3">キャンセル</button>
+                  <button type="button" class="btn">上書き</button>
                 </div>
               </form>
           </div>
