--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <div class="wrapper">
 
       <div class="header__mb">
-        <div class="header__mb__logout"><a href=""><i class="icon-logout"></i>ログアウト</a></div>
+        <div class="header__mb__logout"><a href=""><i class="ic-logout"></i>ログアウト</a></div>
         <div class="header__mb__logo"><a href=""><img src="images/logo-mb.svg" alt=""></a></div>
         <div class="header__mb__avatar"><a href=""><img src="images/avatar.png" alt=""></a></div>
       </div>
@@ -31,11 +31,11 @@
           <div class="menuLeft__content">
             <div class="main__nav">
               <ul class="el__menu">
-                <li class="active"><a href="index.html"><i class="icon-home"></i>HOME</a></li>
-                <li><a href="bukken.html"><i class="icon-appraisal"></i>物件鑑定</a></li>
-                <li><a href="user-info.html"><i class="icon-user"></i>会員情報</a></li>
-                <li><a href=""><i class="icon-bar-chart"></i>地価データ</a></li>
-                <li><a href=""><i class="icon-logout"></i>ログアウト</a></li>
+                <li class="active"><a href="index.html"><i class="ic-home"></i>HOME</a></li>
+                <li><a href="bukken.html"><i class="ic-appraisal"></i>物件鑑定</a></li>
+                <li><a href="user-info.html"><i class="ic-user"></i>会員情報</a></li>
+                <li><a href=""><i class="ic-bar-chart"></i>地価データ</a></li>
+                <li><a href=""><i class="ic-logout"></i>ログアウト</a></li>
               </ul>
             </div>
           </div>
@@ -71,9 +71,9 @@
             <div class="col-lg-7">
               <div class="sc__box -table-home">
                 <div class="sc__box__header -small d-flex align-items-center">
-                  <h6 class="sc__box__title d-flex align-items-center"><i class="icon-appraisal"></i>最新登録物件</h6>
+                  <h6 class="sc__box__title d-flex align-items-center"><i class="ic-appraisal"></i>最新登録物件</h6>
                   <div class="ms-auto -text-registered d-none d-md-block">
-                    <i class="icon-list"></i> 物件一覧を見る
+                    <i class="ic-list"></i> 物件一覧を見る
                   </div>
                 </div>
 
@@ -119,7 +119,7 @@
                   <div class="sc__box">
                     <div class="sc__box__content text-center">
                       <div class="sc__box__icon">
-                        <i class="icon-bar-chart"></i>
+                        <i class="ic-bar-chart"></i>
                       </div>
                       <h6>地価データ参照</h6>
                     </div>
@@ -129,7 +129,7 @@
                   <div class="sc__box">
                     <div class="sc__box__content text-center">
                       <div class="sc__box__icon">
-                        <i class="icon-calculator"></i>
+                        <i class="ic-calculator"></i>
                       </div>
                       <h6>時点修正率査定</h6>
                     </div>
@@ -139,7 +139,7 @@
                   <div class="sc__box">
                     <div class="sc__box__content text-center">
                       <div class="sc__box__icon">
-                        <i class="icon-print"></i>
+                        <i class="ic-print"></i>
                       </div>
                       <h6 class="mb-4">調査資料一覧印刷（PDF）</h6>
 
@@ -166,8 +166,8 @@
             <div class="modal-body">
               <p>●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●●します。よろしいですか？</p>
             </div>
-            <div class="modal-footer justify-content-center flex-nowrap">
-              <button type="button" class="btn -three" data-bs-dismiss="modal">キャンセル</button>
+            <div class="modal-footer d-block d-md-flex justify-content-center flex-nowrap gap-20">
+              <button type="button" class="btn -three mb-3 mb-sm-0" data-bs-dismiss="modal">キャンセル</button>
               <button type="button" class="btn">OK</button>
             </div>
           </div>
@@ -176,11 +176,11 @@
 
       <div class="nav__mobile">
         <ul class="nav__mobile--ul">
-          <li class="active"><a href="index.html"><i class="icon-home"></i>HOME</a></li>
-          <li><a href="bukken.html"><i class="icon-appraisal"></i>物件鑑定</a></li>
-          <li><a href="user-info.html"><i class="icon-user"></i>会員情報</a></li>
-          <li><a href=""><i class="icon-bar-chart"></i>地価データ</a></li>
-          <li><a href=""><i class="icon-dots"></i>その他</a></li>
+          <li class="active"><a href="index.html"><i class="ic-home"></i>HOME</a></li>
+          <li><a href="bukken.html"><i class="ic-appraisal"></i>物件鑑定</a></li>
+          <li><a href="user-info.html"><i class="ic-user"></i>会員情報</a></li>
+          <li><a href=""><i class="ic-bar-chart"></i>地価データ</a></li>
+          <li><a href=""><i class="ic-dots"></i>その他</a></li>
         </ul>
       </div>
 
