--- a/user-company.html
+++ b/user-company.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
 
       <div class="header__mb">
-        <div class="header__mb__logout"><a href=""><i class="icon-logout"></i>ログアウト</a></div>
+        <div class="header__mb__logout"><a href=""><i class="ic-logout"></i>ログアウト</a></div>
         <div class="header__mb__logo"><a href=""><img src="images/logo-mb.svg" alt=""></a></div>
         <div class="header__mb__avatar"><a href=""><img src="images/avatar.png" alt=""></a></div>
       </div>
@@ -32,11 +32,11 @@
           <div class="menuLeft__content">
             <div class="main__nav">
               <ul class="el__menu">
-                <li><a href="index.html"><i class="icon-home"></i>HOME</a></li>
-                <li><a href="bukken.html"><i class="icon-appraisal"></i>物件鑑定</a></li>
-                <li class="active"><a href="user-info.html"><i class="icon-user"></i>会員情報</a></li>
-                <li><a href=""><i class="icon-bar-chart"></i>地価データ</a></li>
-                <li><a href=""><i class="icon-logout"></i>ログアウト</a></li>
+                <li><a href="index.html"><i class="ic-home"></i>HOME</a></li>
+                <li><a href="bukken.html"><i class="ic-appraisal"></i>物件鑑定</a></li>
+                <li class="active"><a href="user-info.html"><i class="ic-user"></i>会員情報</a></li>
+                <li><a href=""><i class="ic-bar-chart"></i>地価データ</a></li>
+                <li><a href=""><i class="ic-logout"></i>ログアウト</a></li>
               </ul>
             </div>
           </div>
@@ -60,14 +60,14 @@
 
           <div class="row gx-xl-5">
 
-            <div class="col-lg-6">
+            <div class="col-lg-6 d-flex">
               <div class="sc__box -userinfo">
                 <div class="sc__box__content">
                   <div class="el__header d-flex mb-2 mb-sm-4">
                     <h6 class="el__title">法人アカウント</h6>
                     <a href="" class="ms-auto">編集</a>
                   </div>
-                  <ul class="mb-sm-5 pb-sm-3">
+                  <ul class="mb-sm-5 pb-sm-2">
                     <li class="d-sm-flex">
                       <div class="el__label">組織名</div>
                       <div class="ms-auto text-sm-end">
@@ -120,7 +120,7 @@
               </div>
             </div>
 
-            <div class="col-lg-6">
+            <div class="col-lg-6 d-flex">
               <div class="sc__box -userinfo -list">
                 <div class="sc__box__content">
                   <div class="el__uheader mb-4 pb-5 pb-sm-4 border-bottom">
@@ -160,8 +160,8 @@
                                   <i class="icon-dots"></i>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end">
-                                  <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
-                                  <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                                  <li><a class="dropdown-item" href="#"><i class="ic-edit"></i> 編集</a></li>
+                                  <li><a class="dropdown-item" href="#"><i class="ic-trash"></i> 削除</a></li>
                                 </ul>
                               </div>
                             </td>
@@ -186,8 +186,8 @@
                                   <i class="icon-dots"></i>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end">
-                                  <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
-                                  <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                                  <li><a class="dropdown-item" href="#"><i class="ic-edit"></i> 編集</a></li>
+                                  <li><a class="dropdown-item" href="#"><i class="ic-trash"></i> 削除</a></li>
                                 </ul>
                               </div>
                             </td>
@@ -212,8 +212,8 @@
                                   <i class="icon-dots"></i>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end">
-                                  <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
-                                  <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                                  <li><a class="dropdown-item" href="#"><i class="ic-edit"></i> 編集</a></li>
+                                  <li><a class="dropdown-item" href="#"><i class="ic-trash"></i> 削除</a></li>
                                 </ul>
                               </div>
                             </td>
@@ -238,8 +238,8 @@
                                   <i class="icon-dots"></i>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end">
-                                  <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
-                                  <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                                  <li><a class="dropdown-item" href="#"><i class="ic-edit"></i> 編集</a></li>
+                                  <li><a class="dropdown-item" href="#"><i class="ic-trash"></i> 削除</a></li>
                                 </ul>
                               </div>
                             </td>
@@ -264,8 +264,8 @@
                                   <i class="icon-dots"></i>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end">
-                                  <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
-                                  <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                                  <li><a class="dropdown-item" href="#"><i class="ic-edit"></i> 編集</a></li>
+                                  <li><a class="dropdown-item" href="#"><i class="ic-trash"></i> 削除</a></li>
                                 </ul>
                               </div>
                             </td>
@@ -290,8 +290,8 @@
                                   <i class="icon-dots"></i>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end">
-                                  <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
-                                  <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                                  <li><a class="dropdown-item" href="#"><i class="ic-edit"></i> 編集</a></li>
+                                  <li><a class="dropdown-item" href="#"><i class="ic-trash"></i> 削除</a></li>
                                 </ul>
                               </div>
                             </td>
@@ -316,8 +316,8 @@
                                   <i class="icon-dots"></i>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end">
-                                  <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
-                                  <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                                  <li><a class="dropdown-item" href="#"><i class="ic-edit"></i> 編集</a></li>
+                                  <li><a class="dropdown-item" href="#"><i class="ic-trash"></i> 削除</a></li>
                                 </ul>
                               </div>
                             </td>
@@ -342,8 +342,8 @@
                                   <i class="icon-dots"></i>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end">
-                                  <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
-                                  <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                                  <li><a class="dropdown-item" href="#"><i class="ic-edit"></i> 編集</a></li>
+                                  <li><a class="dropdown-item" href="#"><i class="ic-trash"></i> 削除</a></li>
                                 </ul>
                               </div>
                             </td>
@@ -368,8 +368,8 @@
                                   <i class="icon-dots"></i>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end">
-                                  <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
-                                  <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                                  <li><a class="dropdown-item" href="#"><i class="ic-edit"></i> 編集</a></li>
+                                  <li><a class="dropdown-item" href="#"><i class="ic-trash"></i> 削除</a></li>
                                 </ul>
                               </div>
                             </td>
@@ -394,8 +394,8 @@
                                   <i class="icon-dots"></i>
                                 </a>
                                 <ul class="dropdown-menu dropdown-menu-end">
-                                  <li><a class="dropdown-item" href="#"><i class="icon-edit"></i> 編集</a></li>
-                                  <li><a class="dropdown-item" href="#"><i class="icon-trash"></i> 削除</a></li>
+                                  <li><a class="dropdown-item" href="#"><i class="ic-edit"></i> 編集</a></li>
+                                  <li><a class="dropdown-item" href="#"><i class="ic-trash"></i> 削除</a></li>
                                 </ul>
                               </div>
                             </td>
@@ -404,7 +404,7 @@
                       </table>
                   </div>
 
-                  <button class="btn -s2 -center mb-sm-4"><i class="icon-user"></i> ユーザーを追加</button>
+                  <button class="btn -s2 -center mt-lg-4"><i class="ic-user"></i> ユーザーを追加</button>
                   
                 </div>
               </div> <!-- .sc__box -->
@@ -488,7 +488,7 @@
                         </tbody>
                       </table>
                       <p class="mt-4 text-center">
-                        <a href=""  class="ms-auto -text-registered"><i class="icon-list"></i> その他の支払い履歴を見る</a>
+                        <a href=""  class="ms-auto -text-registered"><i class="ic-list"></i> その他の支払い履歴を見る</a>
                       </p>
 
                     </div>
@@ -505,11 +505,11 @@
 
       <div class="nav__mobile">
         <ul class="nav__mobile--ul">
-          <li><a href="index.html"><i class="icon-home"></i>HOME</a></li>
-          <li><a href="bukken.html"><i class="icon-appraisal"></i>物件鑑定</a></li>
-          <li class="active"><a href="user-info.html"><i class="icon-user"></i>会員情報</a></li>
-          <li><a href=""><i class="icon-bar-chart"></i>地価データ</a></li>
-          <li><a href=""><i class="icon-dots"></i>その他</a></li>
+          <li><a href="index.html"><i class="ic-home"></i>HOME</a></li>
+          <li><a href="bukken.html"><i class="ic-appraisal"></i>物件鑑定</a></li>
+          <li class="active"><a href="user-info.html"><i class="ic-user"></i>会員情報</a></li>
+          <li><a href=""><i class="ic-bar-chart"></i>地価データ</a></li>
+          <li><a href=""><i class="ic-dots"></i>その他</a></li>
         </ul>
       </div>
 
