--- a/user-info.html
+++ b/user-info.html
@@ -13,7 +13,7 @@
     <div class="wrapper">
 
       <div class="header__mb">
-        <div class="header__mb__logout"><a href=""><i class="icon-logout"></i>ログアウト</a></div>
+        <div class="header__mb__logout"><a href=""><i class="ic-logout"></i>ログアウト</a></div>
         <div class="header__mb__logo"><a href=""><img src="images/logo-mb.svg" alt=""></a></div>
         <div class="header__mb__avatar"><a href=""><img src="images/avatar.png" alt=""></a></div>
       </div>
@@ -32,11 +32,11 @@
           <div class="menuLeft__content">
             <div class="main__nav">
               <ul class="el__menu">
-                <li><a href="index.html"><i class="icon-home"></i>HOME</a></li>
-                <li><a href="bukken.html"><i class="icon-appraisal"></i>物件鑑定</a></li>
-                <li class="active"><a href="user-info.html"><i class="icon-user"></i>会員情報</a></li>
-                <li><a href=""><i class="icon-bar-chart"></i>地価データ</a></li>
-                <li><a href=""><i class="icon-logout"></i>ログアウト</a></li>
+                <li><a href="index.html"><i class="ic-home"></i>HOME</a></li>
+                <li><a href="bukken.html"><i class="ic-appraisal"></i>物件鑑定</a></li>
+                <li class="active"><a href="user-info.html"><i class="ic-user"></i>会員情報</a></li>
+                <li><a href=""><i class="ic-bar-chart"></i>地価データ</a></li>
+                <li><a href=""><i class="ic-logout"></i>ログアウト</a></li>
               </ul>
             </div>
           </div>
@@ -194,7 +194,7 @@
                         </tbody>
                       </table>
                       <p class="mt-4 text-center pb-1">
-                        <a href=""  class="ms-auto -text-registered"><i class="icon-list"></i> その他の支払い履歴を見る</a>
+                        <a href=""  class="ms-auto -text-registered"><i class="ic-list"></i> その他の支払い履歴を見る</a>
                       </p>
                     </li>
                   </ul>
@@ -212,11 +212,11 @@
 
       <div class="nav__mobile">
         <ul class="nav__mobile--ul">
-          <li><a href="index.html"><i class="icon-home"></i>HOME</a></li>
-          <li><a href="bukken.html"><i class="icon-appraisal"></i>物件鑑定</a></li>
-          <li class="active"><a href="user-info.html"><i class="icon-user"></i>会員情報</a></li>
-          <li><a href=""><i class="icon-bar-chart"></i>地価データ</a></li>
-          <li><a href=""><i class="icon-dots"></i>その他</a></li>
+          <li><a href="index.html"><i class="ic-home"></i>HOME</a></li>
+          <li><a href="bukken.html"><i class="ic-appraisal"></i>物件鑑定</a></li>
+          <li class="active"><a href="user-info.html"><i class="ic-user"></i>会員情報</a></li>
+          <li><a href=""><i class="ic-bar-chart"></i>地価データ</a></li>
+          <li><a href=""><i class="ic-dots"></i>その他</a></li>
         </ul>
       </div>
 
