--- a/user-input.html
+++ b/user-input.html
@@ -20,7 +20,7 @@
           <div class="userinput__form mb-4 mb-sm-5">
 
             <div class="el__header">
-              <div class="el__title"><i class="icon-user"></i> 新規会員登録</div>
+              <div class="el__title"><i class="ic-user"></i> 新規会員登録</div>
             </div>
 
               <form action="">
@@ -30,10 +30,10 @@
                     <div class="flex-w100">
                       <div class="row gx-3">
                         <div class="col-sm-6">
-                          <input type="text" class="form-control mb-3 mb-sm-0" placeholder="姓">
+                          <input type="text" class="form-control -medium mb-3 mb-sm-0" placeholder="姓">
                         </div>
                         <div class="col-sm-6">
-                          <input type="text" class="form-control" placeholder="名">
+                          <input type="text" class="form-control -medium" placeholder="名">
                         </div>
                       </div>
                     </div>
@@ -42,14 +42,14 @@
                   <div class="input-group input-group-lg mb-4 pb-2 pb-sm-0 mb-sm-3">
                     <div class="mw100px el__label">メールアドレス</div>
                     <div class="flex-w100">
-                        <input type="text" class="form-control mw310px" placeholder="">
+                        <input type="text" class="form-control -medium mw310px" placeholder="">
                     </div>
                   </div>
 
                   <div class="input-group input-group-lg mb-4 pb-2 pb-sm-0 mb-sm-3">
                     <div class="mw100px el__label">パスワード</div>
                     <div class="flex-w100">
-                        <input type="text" class="form-control mw240px" placeholder="">
+                        <input type="text" class="form-control -medium mw240px" placeholder="">
                     </div>
                   </div>
 
@@ -59,28 +59,28 @@
                       <small>※確認</small>
                     </div>
                     <div class="flex-w100">
-                        <input type="text" class="form-control mw240px" placeholder="">
+                        <input type="text" class="form-control -medium mw240px" placeholder="">
                     </div>
                   </div>
 
                   <div class="input-group input-group-lg mb-4 pb-2 pb-sm-0 mb-sm-3">
                     <div class="mw100px el__label">組織名</div>
                     <div class="flex-w100">
-                        <input type="text" class="form-control" placeholder="">
+                        <input type="text" class="form-control -medium" placeholder="">
                     </div>
                   </div>
 
                   <div class="input-group input-group-lg mb-4 pb-2 pb-sm-0 mb-sm-3">
                     <div class="mw100px el__label">郵便番号</div>
                     <div class="flex-w100">
-                        <input type="text" class="form-control mw150px" placeholder="">
+                        <input type="text" class="form-control -medium mw150px" placeholder="">
                     </div>
                   </div>
 
                   <div class="input-group input-group-lg mb-4 pb-2 pb-sm-0 mb-sm-3">
                     <div class="mw100px el__label">都道府県</div>
                     <div class="flex-w100">
-                        <select name="" id="" class="form-control mw150px">
+                        <select name="" id="" class="form-control -medium mw150px">
                           <option value=""></option>
                           <option value="">都道府県</option>
                           <option value="">都道府県</option>
@@ -92,35 +92,35 @@
                   <div class="input-group input-group-lg mb-4 pb-2 pb-sm-0 mb-sm-3">
                     <div class="mw100px el__label">市区町村</div>
                     <div class="flex-w100">
-                        <input type="text" class="form-control" placeholder="">
+                        <input type="text" class="form-control -medium" placeholder="">
                     </div>
                   </div>
 
                   <div class="input-group input-group-lg mb-4 pb-2 pb-sm-0 mb-sm-3">
                     <div class="mw100px el__label">町名以降</div>
                     <div class="flex-w100">
-                        <input type="text" class="form-control" placeholder="">
+                        <input type="text" class="form-control -medium" placeholder="">
                     </div>
                   </div>
 
                   <div class="input-group input-group-lg mb-4 pb-2 pb-sm-0 mb-sm-3">
                     <div class="mw100px el__label">建物名</div>
                     <div class="flex-w100">
-                        <input type="text" class="form-control" placeholder="">
+                        <input type="text" class="form-control -medium" placeholder="">
                     </div>
                   </div>
 
                   <div class="input-group input-group-lg mb-4 pb-2 pb-sm-0 mb-sm-3">
                     <div class="mw100px el__label">電話番号</div>
                     <div class="flex-w100">
-                        <input type="text" class="form-control mw240px" placeholder="">
+                        <input type="text" class="form-control -medium mw240px" placeholder="">
                     </div>
                   </div>
 
                   <div class="input-group input-group-lg mb-5">
                     <div class="mw100px el__label">FAX番号</div>
                     <div class="flex-w100">
-                        <input type="text" class="form-control mw240px" placeholder="">
+                        <input type="text" class="form-control -medium mw240px" placeholder="">
                     </div>
                   </div>
 
