--- a/login.html
+++ b/login.html
@@ -26,7 +26,7 @@
             </div>
             <div class="input-group mb-4"><a href="" class="-text-fpwd">パスワードを忘れた場合</a></div>
             <div class="input-group">
-              <button type="submit" class="btn btn--primary w-100 -arrow-right">ログイン</button>
+              <button type="submit" class="btn btn--primary w-100 -arrow-right">ログイン <i class="ic-angle-right"></i></button>
             </div>
           </form>
         </div>
@@ -41,7 +41,7 @@
             <p class="el__box__title">または</p>
           </div>
           <p class="mb-2">パッケージではなく単体で機能を利用されたいですか？</p>
-          <p><a href="#"><i class="icon-angle-right-circle"></i> <strong>単体機能サービスはこちら</strong></a></p>
+          <p><a href="#"><i class="ic-angle-right-circle"></i> <strong>単体機能サービスはこちら</strong></a></p>
         </div>
       </div>
 
